Closed Bug 533766 Opened 16 years ago Closed 1 month ago

Moving saved search/virtual folder under IMAP may fail with NS_ERROR_FILE_ALREADY_EXISTS.

Categories

(Thunderbird :: Folder and Message Lists, defect)

defect

Tracking

(thunderbird_esr140 affected, thunderbird147 fixed)

RESOLVED FIXED
147 Branch
Tracking Status
thunderbird_esr140 --- affected
thunderbird147 --- fixed

People

(Reporter: wsmwk, Assigned: welpy-cw)

References

Details

(Keywords: regression)

Attachments

(1 file)

can't move saved search/virtual folder via drag and drop Error: uncaught exception: [Exception... "Component returned failure code: 0x80520008 (NS_ERROR_FILE_ALREADY_EXISTS) [nsIMsgCopyService.CopyFolders]" nsresult: "0x80520008 (NS_ERROR_FILE_ALREADY_EXISTS)" location: "JS frame :: chrome://messenger/content/folderPane.js :: ftv_drop :: line 483" data: no]
clarification ... can't move saved search/virtual folder via drag and drop FROM one imap subfolder folder to another. but works OK moving within local folders. and works OK dragging virtual from a imap subfolder to root folder of same imap account
aceman, can this be easily fixed? I think I only see the console error if I have advanced settings at "server supports folders that can contain folders and messages" Error: NS_ERROR_FILE_ALREADY_EXISTS: Component returned failure code: 0x80520008 (NS_ERROR_FILE_ALREADY_EXISTS) [nsIMsgCopyService.CopyFolders] Source File: chrome://messenger/content/folderPane.js Line: 730
Flags: needinfo?(acelists)
I don't know. I am surprised any movement of virtual folder actually works.
Flags: needinfo?(acelists)
I'll try to get the regression range.
Flags: needinfo?(vseerror)
It's going to be very hard to nail a solid regression range, or even good approximate, as can be seen in the results below. 2.0.0.24 consistently works. But VF behavior in the 2008 era for v2 and v3 isn't solid on Thunderbird startup**, and drop behavior is inconsistent - so I'm mentioning some builds where behavior has not changed. Plus, in v3 the folder code is changing frequently. Here's a nastly looking attempt at finding regression range ... 2.0.0.24 works. I can move VF wherever I want in the account/folder structure 3.0a1 01-03-2007 drop VF to subfolder works but trouble moving VF back to account 3.0a1 23-03-2007 drop VF to subfolder works --- In the two 3.0a1 releases above, VFs can disappear after being moved 3.0a1 02-05-2007 no error, drop works only to root account. 3.0a1 01-07-2007 no error, drop works only to root account. 3.0a1 01-09-2007 no error, drop works only to root account. 3.0a1 02-11-2007 no error, drop works only to root account. 3.0a1 01-01-2008 no error, drop works only to root account. 3.0a1 02-02-2008 no error, drop works only to root account. 3.0a1 02-03-2008 no error, drop often works, including root account. but VF sometimes disappears until you collapse and uncollapse the account.** 3.0a2 02-07-2008 no error, drop mostly fails, but I moved VF from subfolder to account 3.0b1 05-08-2008 no error, drop mostly fails, but I moved VF from subfolder to account 3.0b1 02-09-2008 4 errors per drag+drop attempt, drops all fail Error: [Exception... "Component returned failure code: 0x80004002 (NS_NOINTERFACE) [nsISupports.QueryInterface]" nsresult: "0x80004002 (NS_NOINTERFACE)" location: "JS frame :: chrome://messenger/content/messengerdnd.js :: CanDropOnFolderTree :: line 131" data: no] Source File: chrome://messenger/content/messengerdnd.js Line: 131 3.0b1 01-10-2008 errors NS_ERROR_FILE_ALREADY_EXISTS, like comment 0 All of the above predates Nov 6, 2008 Bug 414038 - Replace rdf-driven folder pane with a js-driven/non-rdf treeview
Just FYI: This still doesn't work in 38.5.1. I'd love to see this work. I've just started using it to track conversations with clients, and it's amazing for this. I can grab them and drag them around, but when I drop them nothing happens. Recreating them in the right folder is painful and error-prone.
I would also like it to see this Fixed 52.6.0 (64-Bit)
Flags: needinfo?(vseerror)
Severity: normal → S3
Duplicate of this bug: 1866397

Moving a saved search into a folder already containing other subfolders wasn't
possible. Moving a saved search again into another location would fail since
the copy request wasn't cleared.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
OS: Windows XP → Unspecified
Hardware: x86 → Unspecified
Summary: can't move saved search/virtual folder via drag and drop - NS_ERROR_FILE_ALREADY_EXISTS folderPane.js :: ftv_drop → Moving saved search/virtual folder under IMAP may fail with NS_ERROR_FILE_ALREADY_EXISTS.
Target Milestone: --- → 147 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/e1ed6eb34132
Fix moving virtual folders under IMAP. r=jtracey

Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
See Also: → 1835556
See Also: → 2009626
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: