Bug 533766 - Fix moving virtual folders under IMAP. r=jtracey

Moving a saved search into a folder already containing other subfolders wasn't
possible. Moving a saved search again into another location would fail since
the copy request wasn't cleared.

Differential Revision: https://phabricator.services.mozilla.com/D275058

--HG--
extra : rebase_source : ba6776482a915e7b13c60a3cce91a1c302bcd2b3